# algo-trading

./: .env  .gitignore  pyproject.toml
.docker/: docker-compose.yml
data_processes/postgres/: __init__.py  database.py
data_processes/premarket/: .Dockerfile  __init__.py  config.py  docker-compose.yml  requirements.txt  run_scanner.py  scanner.py  scraper.py  test_scanner.py
examples/: alpaca_adapter_example.py
postgres/: database.py  premarket_db.py
research/ob/: ob_merge.py
scratchpad/ob/: ob_merge.py
src/adapters/alpaca/: __init__.py  common.py  config.py  data_client.py  data_parser.py  execution.py  factories.py  http_client.py  providers.py  setup.md  websocket_client.py
src/adapters/alpaca_adapter/: README_alpaca_adapter.md  __init__.py  config.py  data.py  execution.py  factories.py  providers.py
src/modes/live/: live_premarket_scanner.py
src/modes/sandbox/: paper_premarket_scanner.py
src/strategy/: premarket_scanner.py
src/strategy_utils/pairs_trading/codependence/: codependence_matrix.py  correlation.py  gnpr_distance.py  information.py  optimal_transport.py
src/strategy_utils/pairs_trading/distance_approach/: basic_distance.py
src/strategy_utils/screeners/: finviz_premarket_gainers.py
