[project]
name = "algo-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.15",
    "bs4>=0.0.2",
    "nautilus-trader>=1.202.0",
    "polars>=1.32.0",
    "psycopg2>=2.9.10",
    "requests>=2.32.5",
    "websockets>=15.0.1",
    "yfinance>=0.2.65",
]
