[project]
name = "algo-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.15",
    "alpaca-py>=0.42.0",
    "bs4>=0.0.2",
    "finviz-platform",
    "finvizfinance>=1.1.1",
    "nautilus-trader>=1.202.0",
    "polars>=1.32.0",
    "psycopg2>=2.9.10",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "websockets>=15.0.1",
    "yfinance>=0.2.65",
]

[tool.uv.sources]
finviz-platform = { git = "https://github.com/mariostoev/finviz" }
